--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Cô giáo kêu làm theo</title>
 </head>
 <body>
-
+    <h1>Hello cô giáo</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequatur deleniti et ipsam iure laudantium magni nam porro quae, quisquam quos ratione reiciendis repellat sed tenetur ullam velit vero voluptatum!</p>
 </body>
 </html>
