--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>Hello cô giáo</h1>
+    <h2>Cô giáo kêu tui tạo host !. <br>
+        Chứ tui có biết mẹ gì đâu :v
+    </h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis consequatur deleniti et ipsam iure laudantium magni nam porro quae, quisquam quos ratione reiciendis repellat sed tenetur ullam velit vero voluptatum!</p>
 </body>
 </html>
